# tarlox

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/: README_TR.md
example/: basic_if.lox  classes.lox  currying_and_lambda.lox  fibonacci.lox  for_loop.lox  inheritance.lox  paralellism.lox  paralellism2.lox  shadowing.lox  tail_call.lox  this.lox  while_loop.lox
src/: errors.rs  executor.rs  interpreter.rs  main.rs  resolver.rs  scanner.rs  standard.rs  syntax.rs
src/errors/: lox_error.rs
src/executor/: call_stack.rs  callable.rs  class.rs  environment.rs  function.rs  object.rs
src/interpreter/: object.rs
src/scanner/: token.rs  token_type.rs
src/standard/: clock.rs  clock_millis.rs
src/syntax/: expression.rs  minor_parse_error.rs  statement.rs
